# gameOfLife.gl

./: CMakeLists.txt  README.md  README.txt
assets/shaders/fragmentShaders/: grid.frag
assets/shaders/vertexShaders/: grid.vert  quad.vert
src/: gol.cpp  gol.h  grid.cpp  grid.h  main.cpp  quad.cpp  quad.h
src/utils/: shader.cpp  shader.h
